move from bridgemanager to rn host

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -2,12 +2,12 @@ require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 # Uncomment the next line to define a global platform for your project
 # platform :ios, '9.0'
-platform :ios, min_ios_version_supported
+platform :ios, '13.0'
 prepare_react_native_project!
 
 target 'ReactNativeHostExample' do
   # Comment the next line if you don't want to use dynamic frameworks
-  use_frameworks!
+  # use_frameworks!
 
   # Pods for ReactNativeHostExample
   config = use_native_modules!
